// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User.arguments connection fetches a user's arguments: user1 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-11 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMA==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-11 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument10",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-12 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMQ==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-12 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument11",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-13 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMg==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-13 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument12",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-14 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMw==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-14 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument13",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-15 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNA==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-15 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument14",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-16 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNQ==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-16 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument15",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-17 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNg==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-17 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument16",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-18 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNw==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-18 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument17",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-19 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOA==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-19 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument18",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMQ==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>\`",
            "contribuable": true,
            "createdAt": "2015-01-20 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOQ==",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-20 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMw==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-enjeux/opinion-3#arg-argument19",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "hasNextPage": true,
      },
      "totalCount": 110,
    },
  },
}
`;

exports[`User.arguments connection fetches a user's arguments: user2 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-06-26 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzY=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-06-26 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-29#arg-argument176",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-06-27 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzc=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-06-27 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzA=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-30#arg-argument177",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-06-28 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzg=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-06-28 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzE=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-31#arg-argument178",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-06-29 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNzk=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-06-29 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzI=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-32#arg-argument179",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-06-30 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODA=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-06-30 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzM=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-33#arg-argument180",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-07-01 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODE=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-07-01 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzQ=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-34#arg-argument181",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-07-02 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODI=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-07-02 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzU=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-35#arg-argument182",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-07-03 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODM=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-07-03 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzY=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-36#arg-argument183",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-07-04 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODQ=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-07-04 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzc=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-37#arg-argument184",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMg==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-07-05 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQxODU=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-07-05 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMzg=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 00:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-38#arg-argument185",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "hasNextPage": true,
      },
      "totalCount": 16,
    },
  },
}
`;

exports[`User.arguments connection fetches a user's arguments: user3 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": false,
            "createdAt": "2019-03-03 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMDM=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2014-09-27 00:00:00",
            "published": true,
            "publishedAt": "2019-03-03 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNTI=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDI=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-03-03 00:00:00",
            "url": "https://capco.test/consultations/strategie-technologique-de-letat-et-services-publics/consultation/collecte-des-avis-pour-une-meilleur-strategie/opinions/le-probleme-constate/opinion-52#arg-argument203",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-09-30 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTM=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-09-30 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-09-30 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument213",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-01 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTQ=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-01 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-01 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument214",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-02 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTU=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-02 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-02 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument215",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-03 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTY=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-03 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-03 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument216",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-04 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTc=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-04 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-04 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument217",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-05 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTg=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-05 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-05 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument218",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-06 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMTk=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-06 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-06 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument219",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-07 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMjA=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-07 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-07 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument220",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyMw==",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2019-10-08 00:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyMjE=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-03 00:00:00",
            "published": true,
            "publishedAt": "2019-10-08 00:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uNjk=",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDU=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-10-08 00:00:00",
            "url": "https://capco.test/consultations/projet-de-loi-renseignement/consultation/elaboration-de-la-loi/opinions/chapitre-ier-economie-de-la-donnee/section-1-ouverture-des-donnees-publiques/sous-partie-1/opinion-d-hier-69#arg-argument221",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "hasNextPage": true,
      },
      "totalCount": 39,
    },
  },
}
`;

exports[`User.arguments connection fetches a user's arguments: userAdmin 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
            "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
            "contribuable": true,
            "createdAt": "2015-01-01 02:00:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQy",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2015-01-01 02:00:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMg==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2017-01-01 02:00:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/les-causes/opinion-2#arg-argument2",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
            "body": "Coucou, je suis un bel argument !",
            "contribuable": true,
            "createdAt": "2019-06-01 00:51:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyNTE=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2019-06-01 00:51:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMQ==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-06-01 00:51:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/le-probleme-constate/opinion-1#arg-argument251",
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWRtaW4=",
            },
            "body": "Coucou, je suis un bel argument !",
            "contribuable": true,
            "createdAt": "2019-06-01 00:52:00",
            "id": "QXJndW1lbnQ6YXJndW1lbnQyNTI=",
            "kind": "argument",
            "notPublishedReason": null,
            "publishableUntil": "2032-11-01 00:00:00",
            "published": true,
            "publishedAt": "2019-06-01 00:52:00",
            "related": Object {
              "id": "T3BpbmlvbjpvcGluaW9uMQ==",
            },
            "reportings": Object {
              "totalCount": 0,
            },
            "step": Object {
              "id": "Q29uc3VsdGF0aW9uU3RlcDpjc3RlcDE=",
            },
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "updatedAt": "2019-06-01 00:52:00",
            "url": "https://capco.test/consultations/croissance-innovation-disruption/consultation/collecte-des-avis/opinions/le-probleme-constate/opinion-1#arg-argument252",
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`User.arguments connection pagination should paginate correctly after a user's arguments: user1:after:QXJndW1lbnQ6YXJndW1lbnQxMA== 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMQ==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMg==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMw==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNA==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNQ==",
            "kind": "argument",
          },
        },
      ],
      "totalCount": 110,
    },
    "id": "VXNlcjp1c2VyMQ==",
  },
}
`;

exports[`User.arguments connection pagination should paginate correctly after a user's arguments: user1:after:QXJndW1lbnQ6YXJndW1lbnQxNA== 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNQ==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNg==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxNw==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOA==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxOQ==",
            "kind": "argument",
          },
        },
      ],
      "totalCount": 110,
    },
    "id": "VXNlcjp1c2VyMQ==",
  },
}
`;

exports[`User.arguments connection pagination should paginate correctly before a user's arguments: user1:before:QXJndW1lbnQ6YXJndW1lbnQxMA== 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [],
      "totalCount": 110,
    },
    "id": "VXNlcjp1c2VyMQ==",
  },
}
`;

exports[`User.arguments connection pagination should paginate correctly before a user's arguments: user1:before:QXJndW1lbnQ6YXJndW1lbnQxNA== 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMA==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMQ==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMg==",
            "kind": "argument",
          },
        },
        Object {
          "node": Object {
            "id": "QXJndW1lbnQ6YXJndW1lbnQxMw==",
            "kind": "argument",
          },
        },
      ],
      "totalCount": 110,
    },
    "id": "VXNlcjp1c2VyMQ==",
  },
}
`;
